# libwick

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  cmake.yml
benchmark/: Basis-bench.cpp  CMakeLists.txt  Model-bench.cpp  NormalOrder-bench.cpp  Operator-bench.cpp
examples/: CMakeLists.txt  HeisenbergChain.cpp  HubbardChain.cpp  HubbardKagome.cpp  HubbardSquare4x4.cpp  main.cpp
src/: Assert.cpp  Assert.h  Basis.cpp  Basis.h  BasisFilter.h  BosonicBasis.cpp  BosonicBasis.h  CMakeLists.txt  Expression.cpp  Expression.h  FermionicBasis.cpp  FermionicBasis.h  GenericBasis.cpp  GenericBasis.h  IndexedVectorMap.h  Model.cpp  Model.h  NormalOrder.cpp  NormalOrder.h  NormalOrderer.cpp  NormalOrderer.h  Operator.cpp  Operator.h  SparseMatrix.cpp  SparseMatrix.h  SpinOperators.cpp  SpinOperators.h  Term.cpp  Term.h  main.cpp
src/Models/: HeisenbergChain.h  HubbardChain.cpp  HubbardChain.h  HubbardChainKSpace.cpp  HubbardChainKSpace.h  HubbardKagome.cpp  HubbardKagome.h  HubbardSquare.cpp  HubbardSquare.h  LinearChain.cpp  LinearChain.h
src/Pointers/: NonnullOwnPtr.h  OwnPtr.h
tests/: Basis-test.cpp  CMakeLists.txt  Expression-test.cpp  Model-test.cpp  NormalOrder-test.cpp  Operator-test.cpp  SparseMatrix-test.cpp  Term-test.cpp
tools/: check_clang_tidy.sh  check_copyright_notice.sh  check_example_in_readme.py  check_format.sh  format.sh  report_todo_as_issues.py
